# architectured

./: Cargo.toml  README.md  docker-compose.yml
application/: Cargo.toml
application/src/: error.rs  impls.rs  lib.rs  service.rs
application/src/impls/: book.rs  person.rs
application/src/service/: book.rs  person.rs
application/src/services/: person.rs
application/src/transfer/: person.rs
driver/: Cargo.toml
driver/src/: database.rs  error.rs  gateway.rs  init.rs  journal.rs  lib.rs
driver/src/database/: person.rs
driver/src/error/: compat.rs  internal.rs
driver/src/error/compat/: sqlx.rs
driver/src/gateway/: person.rs
driver/src/impls/: transaction.rs
driver/src/journal/: book.rs  person.rs
kernel/: Cargo.toml
kernel/src/: command.rs  entities.rs  error.rs  event.rs  io.rs  journal.rs  lib.rs
kernel/src/command/: book.rs  person.rs
kernel/src/entities/: book.rs  person.rs
kernel/src/entities/book/: id.rs  rental_term.rs  rented_at.rs  stock.rs  title.rs
kernel/src/entities/person/: id.rs  name.rs  rental.rs
kernel/src/event/: book.rs  person.rs
kernel/src/io/: transaction.rs
kernel/src/journal/: book.rs  person.rs
kernel/src/repository/: person.rs
migrations/journal/: 20240125033918_init.sql  20240127091511_index.sql  20240127141613_procedure.sql
server/: Cargo.toml
server/src/: controller.rs  error.rs  handler.rs  lib.rs  main.rs
server/src/routes/: person.rs
server/src/routes/person/: error.rs  request.rs  response.rs
