[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }

orbital = "0.1"
error-stack = { version = "0.4", features = [] }

kernel = { path = "../kernel" }

[features]
prelude = []
interfaces = []
default = ["prelude", "interfaces"]