[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
deadpool-redis = "0.14.0"
serde_json = "1"
async-trait = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
error-stack = "0.4"

kernel = { path = "../kernel" }

[dependencies.sqlx]
version = "0.7"
features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "macros",
  "time",
  "uuid",
  "json"
]


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "*", features = ["serde", "v4"] }