[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }

rand = "0.8"
destructure = "0.5.5"
serde = { version = "1", features = ["derive"] }

async-trait = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }
orbital = "0.1"

[dev-dependencies]
serde_json = "1"

[features]
interface = []
prelude = []
default = ["prelude", "interface"]