[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

anyhow = { workspace = true }
thiserror = { workspace = true }

application = { path = "../application" }
driver = { path = "../driver" }
kernel = { path = "../kernel", default-features = false, features = ["interface"] }